--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
       - *attach_workspace
       - run:
           name: Create Release
-          command: yarn auto shipit --dry-run
+          command: yarn auto shipit
 
   publish-base:
     <<: *defaults
@@ -118,10 +118,10 @@ workflows:
           requires:
             - build
 
-#      - release:
-#          context: kickstartDS
-#          requires:
-#            - build
+      - release:
+         context: kickstartDS
+         requires:
+           - build
 
       - publish-base:
           context: kickstartDS
