--- a/packages/tools/storybook/package.json
+++ b/packages/tools/storybook/package.json
@@ -32,11 +32,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
-    "@storybook/addon-a11y": "^6.3.0-rc.11",
-    "@storybook/addon-essentials": "^6.3.0-rc.11",
-    "@storybook/core": "^6.3.0-rc.11",
-    "@storybook/cli": "^6.3.0-rc.11",
-    "@storybook/react": "^6.3.0-rc.11",
+    "@storybook/addon-a11y": "^6.3.1",
+    "@storybook/addon-essentials": "^6.3.1",
+    "@storybook/core": "^6.3.1",
+    "@storybook/cli": "^6.3.1",
+    "@storybook/react": "^6.3.1",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@vitejs/plugin-react-refresh": "^1.3.1",
