--- a/lerna.json
+++ b/lerna.json
@@ -2,6 +2,7 @@
   "version": "independent",
   "npmClient": "yarn",
   "useWorkspaces": true,
+  "packages": ["packages/*/*"],
   "command": {
     "version": {
       "message": "chore: new release",
