ci(dependabot): describe workspaces more specific [skip ci]
see https://github.com/dependabot/dependabot-core/issues/1777

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "repository": "kickstartDS/kickstartDS",
   "workspaces": [
-    "packages/*/*"
+    "packages/components/*",
+    "packages/tools/*"
   ],
   "scripts": {
     "build": "lerna run --stream --no-prefix build",
