--- a/package.json
+++ b/package.json
@@ -37,17 +37,10 @@
     "watch-tokens": "sass --watch --load-path=node_modules packages/components/core/source/design-tokens/tokens.scss packages/components/core/lib/design-tokens/tokens.css"
   },
   "dependencies": {
-    "change-case": "^4.1.2",
-    "chokidar": "^3.5.2",
-    "del": "^6.0.0",
     "execa": "^5.1.1",
-    "fancy-log": "^1.3.3",
     "fast-glob": "^3.2.6",
     "fs-extra": "^10.0.0",
-    "graphql": "^15.5.1",
     "json-csv": "^3.0.1",
-    "json-schema-faker": "^0.5.0-rcv.35",
-    "jsonschema2graphql": "^1.1.1",
     "license-checker": "^25.0.1",
     "react": "^17.0.2"
   },
@@ -68,8 +61,7 @@
     "lint-staged": "^11.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.2",
-    "stylelint": "^13.13.0",
-    "typescript": "^4.3.5"
+    "stylelint": "^13.13.0"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org",
