--- a/packages/tools/build-components/package.json
+++ b/packages/tools/build-components/package.json
@@ -36,6 +36,7 @@
     "rollup-plugin-styles": "^3.14.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-ts": "^1.4.0",
-    "sass": "^1.32.8"
+    "sass": "^1.32.8",
+    "typescript": "^4.3.5"
   }
 }
