--- a/packages/tools/storybook/package.json
+++ b/packages/tools/storybook/package.json
@@ -31,16 +31,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
-    "@storybook/addon-a11y": "^6.3.1",
-    "@storybook/addon-essentials": "^6.3.1",
-    "@storybook/core": "^6.3.1",
-    "@storybook/cli": "^6.3.1",
-    "@storybook/react": "^6.3.1",
+    "@storybook/addon-a11y": "^6.3.2",
+    "@storybook/addon-essentials": "^6.3.2",
+    "@storybook/core": "^6.3.2",
+    "@storybook/cli": "^6.3.2",
+    "@storybook/react": "^6.3.2",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.1",
     "chromatic": "^5.8.0",
     "storybook-addon-performance": "^0.16.0",
-    "storybook-builder-vite": "^0.0.9",
+    "storybook-builder-vite": "0.0.9",
     "vite": "^2.3.2"
   }
 }
