ci: don't run build on dependabot branches

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,7 +126,10 @@ jobs:
 workflows:
   release:
     jobs:
-      - build
+      - build:
+          filters:
+            branches:
+              ignore: /^dependabot\/.*$/
 
       - chromatic:
           context: kickstartDS
