--- a/packages/tools/build-components/package.json
+++ b/packages/tools/build-components/package.json
@@ -18,6 +18,7 @@
     "change-case": "^4.1.2",
     "chokidar": "^3.5.2",
     "cssnano": "^5.0.2",
+    "custom-property-extract": "^1.2.1",
     "debug": "^4.3.1",
     "del": "^6.0.0",
     "fast-glob": "^3.2.6",
