--- a/packages/tools/storybook/package.json
+++ b/packages/tools/storybook/package.json
@@ -18,6 +18,7 @@
     "storybook-form:build": "node index.js build --module=form"
   },
   "dependencies": {
+    "@kickstartds/storybook-addon-component-tokens": "^0.1.2",
     "change-case": "^4.1.2",
     "del": "^6.0.0",
     "fast-glob": "^3.2.6",
@@ -33,8 +34,8 @@
     "@babel/core": "^7.14.6",
     "@storybook/addon-a11y": "^6.3.2",
     "@storybook/addon-essentials": "^6.3.2",
-    "@storybook/core": "^6.3.2",
     "@storybook/cli": "^6.3.2",
+    "@storybook/core": "^6.3.2",
     "@storybook/react": "^6.3.2",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.1",
