--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "watch-tokens": "sass --watch --load-path=node_modules packages/components/core/source/design-tokens/tokens.scss packages/components/core/lib/design-tokens/tokens.css"
   },
   "dependencies": {
+    "@kickstartds/eslint-config": "^1.0.0-alpha.3",
+    "@kickstartds/stylelint-config": "^1.0.0-alpha.1",
     "execa": "^5.1.1",
     "fast-glob": "^3.2.6",
     "fs-extra": "^10.0.0",
