--- a/packages/components/core/package.json
+++ b/packages/components/core/package.json
@@ -24,6 +24,7 @@
     "del": "^6.0.0",
     "dependency-graph": "^0.11.0",
     "esbuild": "^0.12.14",
+    "fast-glob": "^3.2.6",
     "fs-extra": "^10.0.0",
     "htm": "^3.0.4",
     "lazysizes": "^5.3.2",
