--- a/packages/components/content/package.json
+++ b/packages/components/content/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kickstartds/content",
-  "version": "1.0.0-alpha.30",
+  "version": "1.0.0",
   "description": "kickstartDS Content Module",
   "author": "ruhmesmeile GmbH <mail@ruhmesmeile.com> (https://ruhmesmeile.com)",
   "homepage": "https://ruhmesmeile.com",
@@ -21,8 +21,8 @@
   ],
   "dependencies": {
     "@babel/runtime": "^7.13.17",
-    "@kickstartds/base": "^1.0.0-alpha.28",
-    "@kickstartds/core": "^1.0.0-alpha.16",
+    "@kickstartds/base": "^1.0.0",
+    "@kickstartds/core": "^1.0.0",
     "classnames": "^2.2.6",
     "countup.js": "^2.0.7",
     "date-fns": "^2.19.0",
