--- a/packages/tools/storybook/package.json
+++ b/packages/tools/storybook/package.json
@@ -27,6 +27,7 @@
     "lazysizes": "^5.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.1",
+    "react-emoji-render": "^1.2.4",
     "svgstore": "^3.0.0-2",
     "yargs-parser": "^20.2.7"
   },
