--- a/packages/components/base/source/2-molecules/teaser/teaser.definitions.json
+++ b/packages/components/base/source/2-molecules/teaser/teaser.definitions.json
@@ -3,6 +3,7 @@
   "$id": "http://frontend.ruhmesmeile.com/base/molecules/teaser.definitions.json",
   "title": "Teaser",
   "description": "Component to tease external content",
+  "type": "object",
   "definitions": {
     "teaser": {
       "type": "object",
@@ -27,6 +28,7 @@
           "description": "Optionally use this to apply a dark variant to the box"
         },
         "link": {
+          "type": "object",
           "allOf": [
             {
               "$ref": "http://frontend.ruhmesmeile.com/base/atoms/link-button.schema.json"
