--- a/packages/tools/storybook/package.json
+++ b/packages/tools/storybook/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "scripts": {
     "run-chromatic": "chromatic --skip '@(renovate/**|dependabot/**)' --exit-zero-on-changes --exit-once-uploaded --project-token $CHROMATIC_PROJECT_TOKEN",
-    "chromatic": "yarn run run-chromatic -- --build-script-name 'storybook:build'",
-    "chromatic-base": "yarn run run-chromatic -- --build-script-name 'storybook-base:build'",
-    "chromatic-blog": "yarn run run-chromatic -- --build-script-name 'storybook-blog:build'",
-    "chromatic-content": "yarn run run-chromatic -- --build-script-name 'storybook-content:build'",
-    "chromatic-form": "yarn run run-chromatic -- --build-script-name 'storybook-form:build'",
+    "chromatic": "yarn run run-chromatic --build-script-name 'storybook:build'",
+    "chromatic-base": "yarn run run-chromatic --build-script-name 'storybook-base:build'",
+    "chromatic-blog": "yarn run run-chromatic --build-script-name 'storybook-blog:build'",
+    "chromatic-content": "yarn run run-chromatic --build-script-name 'storybook-content:build'",
+    "chromatic-form": "yarn run run-chromatic --build-script-name 'storybook-form:build'",
     "storybook": "node index.js",
     "storybook:build": "node index.js build",
     "storybook-base:build": "node index.js build --module=base",
