--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,11 +5,10 @@
   // List of extensions which should be recommended for users of this workspace.
   "recommendations": [
     "dbaeumer.vscode-eslint",
-    "andrejunges.Handlebars",
-    "stylelint.vscode-stylelint",
     "editorconfig.editorconfig",
-    "mikestead.dotenv",
-    "esbenp.prettier-vscode"
+    "esbenp.prettier-vscode",
+    "silvenon.mdx",
+    "stylelint.vscode-stylelint"
   ],
   // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
   "unwantedRecommendations": []
