build: use package exports
#97

--- a/packages/components/content/package.json
+++ b/packages/components/content/package.json
@@ -8,8 +8,22 @@
     "url": "https://master--608332fa9164bb0021bc5f97.chromatic.com"
   },
   "license": "SEE LICENSE IN LICENSE",
-  "main": "./lib/index.js",
+  "type": "module",
+  "exports": {
+    "./package.json": "./package.json",
+    "./source/*": "./source/*",
+    ".": "./lib/index.js",
+    "./*": "./lib/*"
+  },
   "types": "./lib/index.d.ts",
+  "typesVersions": {
+    "*": {
+      "*": [
+        "lib/*",
+        "lib/*/index.d.ts"
+      ]
+    }
+  },
   "scripts": {
     "build": "node ../../tools/build-components/source",
     "watch": "node ../../tools/build-components/source --watch",
