--- a/packages/components/core/package.json
+++ b/packages/components/core/package.json
@@ -5,8 +5,23 @@
   "author": "ruhmesmeile GmbH <mail@ruhmesmeile.com> (https://ruhmesmeile.com)",
   "homepage": "https://ruhmesmeile.com",
   "license": "SEE LICENSE IN LICENSE",
-  "main": "./lib/index.js",
+  "type": "module",
+  "exports": {
+    "./package.json": "./package.json",
+    "./bundle": "./bundle/index.js",
+    "./source/*": "./source/*",
+    ".": "./lib/index.js",
+    "./*": "./lib/*"
+  },
   "types": "./lib/index.d.ts",
+  "typesVersions": {
+    "*": {
+      "*": [
+        "lib/*",
+        "lib/*/index.d.ts"
+      ]
+    }
+  },
   "scripts": {
     "build": "node ../../tools/build-components/source",
     "watch": "node ../../tools/build-components/source --watch",
