--- a/packages/tools/storybook/package.json
+++ b/packages/tools/storybook/package.json
@@ -42,6 +42,7 @@
     "@types/react-dom": "^17.0.9",
     "chromatic": "^5.8.0",
     "storybook-builder-vite": "0.0.12",
+    "storybook-dark-mode": "^1.0.8",
     "vite": "^2.4.4"
   }
 }
