--- a/packages/components/core/package.json
+++ b/packages/components/core/package.json
@@ -34,7 +34,8 @@
     "vhtml": "^2.2.0"
   },
   "devDependencies": {
-    "include-media": "^1.4.9"
+    "include-media": "^1.4.9",
+    "storybook-design-token": "^1.2.0"
   },
   "peerDependencies": {
     "react": "^17.0.2"
