--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -28,7 +28,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/31414552?v=4",
       "profile": "https://github.com/lmestel",
       "contributions": [
-        "code"
+        "code",
+        "doc"
       ]
     }
   ],
