feat: add `className` to any schema

--- a/packages/components/base/source/2-molecules/teaser/teaser.definitions.json
+++ b/packages/components/base/source/2-molecules/teaser/teaser.definitions.json
@@ -44,6 +44,11 @@
               }
             }
           ]
+        },
+        "className": {
+          "title": "Class",
+          "description": "Additional css classes attached to the box",
+          "type": "string"
         }
       }
     }
