style: prettify code

--- a/.prettierignore
+++ b/.prettierignore
@@ -6,3 +6,4 @@ package-lock.json
 CHANGELOG.md
 legacy-instance/settings/**/*.scss
 packages/components/*/lib
+packages/tools/storybook/storybook-static
