--- a/packages/components/form/package.json
+++ b/packages/components/form/package.json
@@ -23,6 +23,7 @@
     "@babel/runtime": "^7.15.4",
     "@kickstartds/base": "^1.4.0",
     "@kickstartds/core": "^1.4.0",
+    "awesomplete": "^1.1.5",
     "classnames": "^2.2.6"
   },
   "devDependencies": {
