--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
   },
   "dependencies": {
     "@kickstartds/eslint-config": "^1.0.1",
-    "@kickstartds/stylelint-config": "^1.0.1",
+    "@kickstartds/stylelint-config": "^2.0.0",
     "execa": "^5.1.1",
     "fast-glob": "^3.2.7",
     "fs-extra": "^10.0.0",
     "json-csv": "^4.0.2",
     "license-checker": "^25.0.1",
+    "postcss": "^8.4.4",
+    "postcss-scss": "^4.0.2",
     "react": "^17.0.2"
   },
   "devDependencies": {
@@ -63,7 +65,7 @@
     "lint-staged": "^12.1.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.0",
-    "stylelint": "^13.13.0"
+    "stylelint": "^14.1.0"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org",
