--- a/packages/tools/storybook/package.json
+++ b/packages/tools/storybook/package.json
@@ -42,8 +42,6 @@
     "@types/react-dom": "^17.0.11",
     "@whitespace/storybook-addon-html": "git+https://github.com/lmestel/storybook-addon-html.git#v5.3.0",
     "chromatic": "^6.0.6",
-    "storybook-builder-vite": "0.0.12",
-    "storybook-dark-mode": "^1.0.8",
-    "vite": "^2.6.14"
+    "storybook-dark-mode": "^1.0.8"
   }
 }
