feat: remove `calc` from tokens
to be platform agnostic

--- a/packages/components/core/package.json
+++ b/packages/components/core/package.json
@@ -39,6 +39,7 @@
     "pubsub-js": "^1.9.4",
     "sass": "^1.49.7",
     "svgstore": "^3.0.1",
+    "tinycolor2": "^1.4.2",
     "vhtml": "^2.2.0"
   },
   "devDependencies": {
