--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 defaults: &defaults
   docker:
-    - image: circleci/node:14.17
+    - image: cimg/node:16.14
   working_directory: /mnt/ramdisk
   resource_class: medium+
 
