--- a/packages/components/content/package.json
+++ b/packages/components/content/package.json
@@ -24,8 +24,7 @@
     "@kickstartds/base": "^1.5.1",
     "@kickstartds/core": "^1.5.0",
     "classnames": "^2.2.6",
-    "countup.js": "^2.0.8",
-    "objectFitPolyfill": "^2.3.0"
+    "countup.js": "^2.0.8"
   },
   "devDependencies": {
     "bourbon": "^7.0.0"
