--- a/packages/components/base/source/2-molecules/teaser/teaser.definitions.json
+++ b/packages/components/base/source/2-molecules/teaser/teaser.definitions.json
@@ -1,6 +1,6 @@
 {
   "$schema": "http://json-schema.org/draft-07/schema#",
-  "$id": "http://frontend.ruhmesmeile.com/base/molecules/teaser.definitions.json",
+  "$id": "http://schema.kickstartds.com/base/teaser.definitions.json",
   "title": "Teaser",
   "description": "Component to tease external content",
   "type": "object",
@@ -31,7 +31,7 @@
           "type": "object",
           "allOf": [
             {
-              "$ref": "http://frontend.ruhmesmeile.com/base/atoms/link-button.schema.json"
+              "$ref": "http://schema.kickstartds.com/base/link-button.schema.json"
             },
             {
               "properties": {
