--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "license-checker": "^25.0.1",
     "postcss": "^8.4.6",
     "postcss-scss": "^4.0.3",
-    "react": "^17.0.2"
+    "react": "^18.0.0-rc.0"
   },
   "devDependencies": {
     "@auto-it/all-contributors": "^10.32.6",
