--- a/packages/components/base/package.json
+++ b/packages/components/base/package.json
@@ -28,7 +28,8 @@
     "focus-visible": "^5.0.2",
     "lodash-es": "^4.17.21",
     "photoswipe": "^4.1.3",
-    "react-markdown": "^8.0.0"
+    "react-markdown": "^8.0.0",
+    "vhtml": "^2.2.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.39",
