--- a/packages/components/core/package.json
+++ b/packages/components/core/package.json
@@ -26,12 +26,10 @@
     "esbuild": "^0.14.21",
     "fast-glob": "^3.2.11",
     "fs-extra": "^10.0.0",
-    "htm": "^3.1.0",
     "lazysizes": "^5.3.2",
     "lodash-es": "^4.17.21",
     "pubsub-js": "^1.9.4",
-    "sass": "^1.49.7",
-    "vhtml": "^2.2.0"
+    "sass": "^1.49.7"
   },
   "devDependencies": {
     "include-media": "^1.4.9",
