--- a/packages/tools/build-components/package.json
+++ b/packages/tools/build-components/package.json
@@ -12,8 +12,8 @@
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-replace": "^3.0.1",
+    "@wordpress/babel-plugin-import-jsx-pragma": "^3.1.1",
     "autoprefixer": "^10.4.2",
-    "babel-plugin-transform-jsx-to-htm": "^2.2.0",
     "builtin-modules": "^3.2.0",
     "change-case": "^4.1.2",
     "chokidar": "^3.5.3",
