--- a/packages/tools/build-components/package.json
+++ b/packages/tools/build-components/package.json
@@ -11,8 +11,6 @@
     "@babel/preset-typescript": "^7.16.7",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-replace": "^3.0.1",
-    "@wordpress/babel-plugin-import-jsx-pragma": "^3.1.1",
     "autoprefixer": "^10.4.2",
     "builtin-modules": "^3.2.0",
     "change-case": "^4.1.2",
@@ -21,13 +19,14 @@
     "custom-property-extract": "^1.2.1",
     "debug": "^4.3.3",
     "del": "^6.0.0",
+    "esbuild": "^0.14.21",
     "fast-glob": "^3.2.11",
     "find-up": "^5.0.0",
     "fs-extra": "^10.0.0",
     "json-schema-merge-allof": "^0.8.1",
     "json-schema-ref-parser": "^9.0.7",
     "json-schema-to-typescript": "^10.1.5",
-    "lodash": "^4.17.21",
+    "magic-string": "^0.25.7",
     "postcss": "^8.4.6",
     "postcss-combine-duplicated-selectors": "^10.0.3",
     "postcss-sort-media-queries": "^4.2.1",
