build: add `beta` to prelease branches

--- a/.autorc
+++ b/.autorc
@@ -1,6 +1,10 @@
 {
   "author": "Lukas Mestel <lukas.mestel@kickstartds.com>",
   "baseBranch": "master",
+  "prereleaseBranches": [
+    "next",
+    "beta"
+  ],
   "plugins": [
     "npm",
     [
