--- a/packages/components/core/package.json
+++ b/packages/components/core/package.json
@@ -3,6 +3,9 @@
   "version": "1.5.0",
   "description": "kickstartDS Core Module",
   "homepage": "https://ruhmesmeile.com",
+  "bugs": {
+    "url": "https://github.com/kickstartDS/kickstartDS/issues"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/kickstartDS/kickstartDS.git",
