build(ci): add .storybook folder to workspace

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,6 +61,7 @@ jobs:
           root: .
           paths:
             - packages/components
+            - packages/tools/storybook/.storybook
 
   chromatic:
     <<: *defaults
