--- a/packages/components/core/package.json
+++ b/packages/components/core/package.json
@@ -40,6 +40,7 @@
     "fs-extra": "^10.0.0",
     "htmltojsx": "^0.3.0",
     "lazysizes": "^5.3.2",
+    "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "node-html-parser": "^5.2.0",
     "postcss": "^8.4.6",
