--- a/packages/components/core/package.json
+++ b/packages/components/core/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.17.2",
+    "ajv": "^8.10.0",
     "bourbon": "^7.0.0",
     "del": "^6.0.0",
     "dependency-graph": "^0.11.0",
