--- a/packages/components/core/package.json
+++ b/packages/components/core/package.json
@@ -46,6 +46,8 @@
     "node-html-parser": "^5.2.0",
     "postcss": "^8.4.6",
     "postcss-calc": "^8.2.4",
+    "postcss-colormin": "^5.3.0",
+    "postcss-normalize-whitespace": "^5.1.1",
     "pubsub-js": "^1.9.4",
     "sass": "^1.49.8",
     "svgstore": "^3.0.1",
