--- a/packages/components/core/package.json
+++ b/packages/components/core/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@babel/runtime": "^7.17.2",
     "bourbon": "^7.2.0",
+    "classnames": "^2.2.6",
     "del": "^6.0.0",
     "dependency-graph": "^0.11.0",
     "esbuild": "^0.14.25",
