--- a/packages/tools/build-components/package.json
+++ b/packages/tools/build-components/package.json
@@ -30,6 +30,7 @@
     "lodash": "^4.17.21",
     "postcss": "^8.4.8",
     "postcss-combine-duplicated-selectors": "^10.0.3",
+    "postcss-sort-container-queries": "https://github.com/lmestel/postcss-sort-container-queries",
     "postcss-sort-media-queries": "^4.2.1",
     "rollup": "^2.70.1",
     "rollup-plugin-import-resolver": "^1.2.0",
