feat: merge button & link-button into one component

--- a/packages/components/base/source/2-molecules/teaser/teaser.definitions.json
+++ b/packages/components/base/source/2-molecules/teaser/teaser.definitions.json
@@ -31,7 +31,7 @@
           "type": "object",
           "allOf": [
             {
-              "$ref": "http://schema.kickstartds.com/base/link-button.schema.json"
+              "$ref": "http://schema.kickstartds.com/base/button.schema.json"
             },
             {
               "properties": {
