--- a/packages/components/base/source/2-molecules/teaser/teaser.definitions.json
+++ b/packages/components/base/source/2-molecules/teaser/teaser.definitions.json
@@ -21,11 +21,9 @@
           "description": "Text for the teaser box",
           "format": "markdown"
         },
-        "darkStyle": {
+        "inverted": {
           "type": "boolean",
-          "default": false,
-          "title": "Dark variant",
-          "description": "Optionally use this to apply a dark variant to the box"
+          "title": "Inverted"
         },
         "link": {
           "type": "object",
