--- a/packages/components/core/package.json
+++ b/packages/components/core/package.json
@@ -34,6 +34,7 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/runtime": "^7.17.8",
     "ajv": "^8.10.0",
+    "bezier-js": "^6.1.0",
     "bourbon": "^7.2.0",
     "classnames": "^2.2.6",
     "del": "^6.0.0",
