fix: add cms to packaged files in core

--- a/packages/components/core/package.json
+++ b/packages/components/core/package.json
@@ -20,7 +20,8 @@
     "source/core/*.scss",
     "source/design-tokens/icons/*.svg",
     "bundle/*.js",
-    "design-tokens"
+    "design-tokens",
+    "cms"
   ],
   "scripts": {
     "build": "node ../../tools/build-components/source && yarn build-tokens",
