--- a/packages/components/core/package.json
+++ b/packages/components/core/package.json
@@ -30,8 +30,6 @@
     "watch-tokens": "chokidar \"source/design-tokens/fallback.ks-tokens.json\" -c \"yarn build-tokens\""
   },
   "dependencies": {
-    "@babel/core": "^7.17.8",
-    "@babel/preset-react": "^7.16.7",
     "@babel/runtime": "^7.17.8",
     "bourbon": "^7.2.0",
     "classnames": "^2.2.6",
@@ -43,7 +41,8 @@
     "lazysizes": "^5.3.2",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
-    "pubsub-js": "^1.9.4"
+    "pubsub-js": "^1.9.4",
+    "sass": "^1.50.0"
   },
   "devDependencies": {
     "@kickstartds/style-dictionary": "^1.5.0",
