--- a/packages/tools/style-dictionary/package.json
+++ b/packages/tools/style-dictionary/package.json
@@ -15,16 +15,18 @@
   "author": "ruhmesmeile GmbH <mail@ruhmesmeile.com> (https://ruhmesmeile.com)",
   "main": "./index.js",
   "dependencies": {
+    "@babel/core": "^7.17.8",
+    "@babel/preset-react": "^7.16.7",
     "ajv": "^8.10.0",
     "bezier-js": "^6.1.0",
     "htmltojsx": "^0.3.0",
     "node-html-parser": "^5.2.0",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.6",
     "postcss-calc": "^8.2.4",
     "postcss-colormin": "^5.3.0",
     "postcss-normalize-whitespace": "^5.1.1",
     "postcss-sort-media-queries": "^4.2.1",
-    "sass": "^1.50.0",
     "style-dictionary": "^3.7.0",
     "svgstore": "^3.0.1",
     "tinycolor2": "^1.4.2"
