feat(docs): add basic docusaurus docs

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "chromatic-content": "yarn workspace @kickstartds-internal/storybook chromatic-content",
     "chromatic-form": "yarn workspace @kickstartds-internal/storybook chromatic-form",
     "dereference": "node scripts/schemaDereference.js",
+    "docusaurus-start": "yarn workspace @kickstartds-internal/docusaurus start",
+    "docusaurus-build": "yarn workspace @kickstartds-internal/docusaurus build",
     "eslint": "eslint \"**/*.{js,jsx,ts,tsx}\"",
     "find-licenses": "node ./scripts/license.js",
     "format": "prettier --write .",
