--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,7 +94,7 @@ jobs:
               --url "https://circleci.com/api/v2/project/gh/kickstartDS/website-deployment/pipeline" \
               --header "Circle-Token: ${CIRCLE_CI_WEBSITE_BUILD_TOKEN}" \
               --header "content-type: application/json" \
-              --data '{"branch":"master","parameters":{"run_workflow_deploy":true, "website_branch":"<< pipeline.git.branch >>"}}'
+              --data '{"branch":"master","parameters":{"run_workflow_deploy":true, "website_branch":"master"}}'
 
   publish-base:
     <<: *defaults
