--- a/packages/components/base/source/2-molecules/teaser/teaser.definitions.json
+++ b/packages/components/base/source/2-molecules/teaser/teaser.definitions.json
@@ -32,6 +32,7 @@
               "$ref": "http://schema.kickstartds.com/base/button.schema.json"
             },
             {
+              "type": "object",
               "properties": {
                 "hidden": {
                   "type": "boolean",
