build: fix kds deps in docs

--- a/packages/tools/docusaurus/package.json
+++ b/packages/tools/docusaurus/package.json
@@ -17,8 +17,8 @@
     "@code-hike/mdx": "^0.7.2",
     "@docusaurus/core": "2.0.1",
     "@docusaurus/preset-classic": "2.0.1",
-    "@kickstartds/content": "2.0.0-canary.922.4469.0",
-    "@kickstartds/base": "2.0.0-canary.922.4469.0",
+    "@kickstartds/content": "^1.5.1",
+    "@kickstartds/base": "^1.5.1",
     "@mdx-js/react": "2",
     "clsx": "^1.2.1",
     "docusaurus-theme-mdx-v2": "^0.1.2",
