--- a/packages/tools/docusaurus/package.json
+++ b/packages/tools/docusaurus/package.json
@@ -14,21 +14,22 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@code-hike/mdx": "^0.7.2",
-    "@docusaurus/core": "2.0.1",
-    "@docusaurus/preset-classic": "2.0.1",
+    "@code-hike/mdx": "^0.7.4",
+    "@docusaurus/core": "2.1.0",
+    "@docusaurus/preset-classic": "2.1.0",
     "@kickstartds/content": "^1.5.1",
     "@kickstartds/base": "^1.5.1",
-    "@mdx-js/react": "2",
+    "@mdx-js/react": "2.1.3",
     "clsx": "^1.2.1",
     "docusaurus-theme-mdx-v2": "^0.1.2",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
+    "react-admonitions": "^2.1.0",
     "react-dom": "^17.0.2",
     "shiki": "^0.10.1"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.0.1"
+    "@docusaurus/module-type-aliases": "2.1.0"
   },
   "browserslist": {
     "production": [
