--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "@auto-it/released": "^10.37.6",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
+    "@types/react": "^17.0.50",
+    "@types/react-dom": "^17.0.17",
     "auto": "^10.37.6",
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "^3.3.0",
