--- a/packages/components/core/package.json
+++ b/packages/components/core/package.json
@@ -26,8 +26,7 @@
     "build": "node ../../tools/build-components/source && yarn build-tokens",
     "build-tokens": "node scripts/build-tokens.js",
     "schema": "node ../../tools/build-components/source --schema",
-    "watch": "concurrently -r yarn:watch-tokens \"node ../../tools/build-components/source --watch\"",
-    "watch-tokens": "chokidar \"source/design-tokens/fallback.ks-tokens.json\" -c \"yarn build-tokens\""
+    "watch": "yarn build-tokens && node ../../tools/build-components/source --watch"
   },
   "dependencies": {
     "@babel/runtime": "^7.19.0",
@@ -46,10 +45,8 @@
   },
   "devDependencies": {
     "@kickstartds/style-dictionary": "^1.5.0",
-    "chokidar-cli": "^3.0.0",
-    "concurrently": "^7.0.0",
     "storybook-design-token": "^1.4.0",
-    "style-dictionary": "^3.7.0"
+    "style-dictionary": "^3.7.1"
   },
   "peerDependencies": {
     "react": "^17.0.2"
