--- a/packages/tools/storybook/package.json
+++ b/packages/tools/storybook/package.json
@@ -18,6 +18,8 @@
     "storybook:build": "node index.js build"
   },
   "dependencies": {
+    "@kickstartds/core": "^1.5.0",
+    "@kickstartds/style-dictionary": "^1.5.0",
     "change-case": "^4.1.2",
     "del": "^6.0.0",
     "fast-glob": "^3.2.11",
@@ -41,6 +43,8 @@
     "@types/react-dom": "^17.0.14",
     "@whitespace/storybook-addon-html": "git+https://github.com/lmestel/storybook-addon-html.git#v5.3.1",
     "chromatic": "^6.10.0",
-    "storybook-dark-mode": "^1.1.2"
+    "lodash": "^4.17.21",
+    "storybook-dark-mode": "^1.1.2",
+    "style-dictionary": "^3.7.1"
   }
 }
