--- a/packages/tools/docusaurus/package.json
+++ b/packages/tools/docusaurus/package.json
@@ -17,8 +17,7 @@
     "@code-hike/mdx": "^0.7.4",
     "@docusaurus/core": "2.1.0",
     "@docusaurus/preset-classic": "2.1.0",
-    "@kickstartds/content": "^1.5.1",
-    "@kickstartds/base": "^1.5.1",
+    "@kickstartds/design-system": "^2.1.24",
     "@mdx-js/react": "2.1.3",
     "clsx": "^1.2.1",
     "docusaurus-theme-mdx-v2": "^0.1.2",
