--- a/packages/components/blog/package.json
+++ b/packages/components/blog/package.json
@@ -21,9 +21,9 @@
     "source/**/*-vars.scss"
   ],
   "scripts": {
-    "build": "node ../../tools/build-components/source",
-    "schema": "node ../../tools/build-components/source --schema",
-    "watch": "node ../../tools/build-components/source --watch"
+    "build": "kdsBundle",
+    "schema": "kdsBundle --schema",
+    "watch": "kdsBundle --watch"
   },
   "dependencies": {
     "@babel/runtime": "^7.19.0",
@@ -31,6 +31,9 @@
     "@kickstartds/core": "^1.5.0",
     "classnames": "^2.2.6",
     "date-fns": "^2.28.0"
+  },
+  "devDependencies": {
+    "@kickstartds/bundler": "^1.5.0"
   },
   "peerDependencies": {
     "react": "^17.0.2"
