--- a/packages/components/content/package.json
+++ b/packages/components/content/package.json
@@ -21,9 +21,9 @@
     "source/**/*-vars.scss"
   ],
   "scripts": {
-    "build": "node ../../tools/build-components/source",
-    "schema": "node ../../tools/build-components/source --schema",
-    "watch": "node ../../tools/build-components/source --watch"
+    "build": "kdsBundle",
+    "schema": "kdsBundle --schema",
+    "watch": "kdsBundle --watch"
   },
   "dependencies": {
     "@babel/runtime": "^7.19.0",
@@ -35,6 +35,7 @@
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
+    "@kickstartds/bundler": "^1.5.0",
     "bourbon": "^7.2.0"
   },
   "peerDependencies": {
