--- a/packages/components/core/package.json
+++ b/packages/components/core/package.json
@@ -23,10 +23,10 @@
     "cms"
   ],
   "scripts": {
-    "build": "node ../../tools/build-components/source && yarn build-tokens",
+    "build": "kdsBundle && yarn build-tokens",
     "build-tokens": "node scripts/build-tokens.js",
-    "schema": "node ../../tools/build-components/source --schema",
-    "watch": "yarn build-tokens && node ../../tools/build-components/source --watch"
+    "schema": "kdsBundle --schema",
+    "watch": "yarn build-tokens && kdsBundle --watch"
   },
   "dependencies": {
     "@babel/runtime": "^7.19.0",
@@ -44,6 +44,7 @@
     "sass": "^1.52.1"
   },
   "devDependencies": {
+    "@kickstartds/bundler": "^1.5.0",
     "@kickstartds/style-dictionary": "^1.5.0",
     "storybook-design-token": "^1.4.0",
     "style-dictionary": "^3.7.1"
