--- a/packages/tools/bundler/package.json
+++ b/packages/tools/bundler/package.json
@@ -1,8 +1,21 @@
 {
-  "name": "@kickstartds-internal/build-components",
-  "version": "1.4.0",
-  "private": true,
-  "main": "source/index.js",
+  "name": "@kickstartds/bundler",
+  "version": "1.5.0",
+  "description": "kickstartDS Component Bundler",
+  "homepage": "https://ruhmesmeile.com",
+  "bugs": {
+    "url": "https://github.com/kickstartDS/kickstartDS/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kickstartDS/kickstartDS.git",
+    "directory": "packages/tools/bundler"
+  },
+  "license": "SEE LICENSE IN LICENSE",
+  "author": "ruhmesmeile GmbH <mail@ruhmesmeile.com> (https://ruhmesmeile.com)",
+  "bin": {
+    "kdsBundle": "index.js"
+  },
   "dependencies": {
     "@babel/core": "^7.19.1",
     "@babel/plugin-transform-runtime": "^7.19.1",
