build: fix component import path & exports field in package.json

--- a/packages/components/base/package.json
+++ b/packages/components/base/package.json
@@ -17,19 +17,23 @@
   "exports": {
     "./package.json": "./package.json",
     "./source/*": "./source/*",
+    "./*Component": {
+      "types": "./lib/*Component.d.ts",
+      "import": "./lib/*Component.js"
+    },
+    "./*": "./lib/*",
     ".": {
       "types": "./lib/index.d.ts",
       "import": "./lib/index.js"
-    },
-    "./*": {
-      "types": "./lib/*/index.d.ts",
-      "import": "./lib/*/index.js"
     }
   },
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "typesVersions": {
     "*": {
+      "*Component": [
+        "lib/*Component.d.ts"
+      ],
       "*": [
         "lib/*",
         "lib/*/index.d.ts"
